# mosox

./: .gitignore  Cargo.toml  Makefile.toml  README.md  grammar.pest
.claude/: instructions-structs.md
.github/workflows/: crates.yml  release.yml  test.yml
docs/: EXAMPLE_IR.md  FUTURE_PLAN.md
examples/: example_1_pars.mod  example_1_pars.mps  example_3.mps  example_4.mod  five_examples.mod  osemosys.mod
scripts/: check_conditions.py  compare_mps.py  normalize_mps.py  parse_osemosys.py  regression.sh
src/: data.rs  lib.rs  loader.rs  main.rs  model.rs  util.rs  utils.rs
src/gmpl/: atoms.rs  expr.rs  loader.rs  mod.rs
src/ir/: mod.rs  model.rs
src/matrix/: bound.rs  constraint.rs  constraints.rs  lookup.rs  mod.rs  param.rs  set.rs
src/mps/: bound.rs  bounds.rs  constraints.rs  lookup.rs  lookups.rs  mod.rs  output.rs  param.rs  params.rs  set.rs
tests/: cli.rs  integration_test.rs
